// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AspectRatio should not render without children 1`] = `null`;

exports[`AspectRatio should render with default styles 1`] = `
.circuit-1 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
}

.circuit-0 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
}

<div
  class="circuit-1 circuit-2"
>
  <div
    class="circuit-0"
  />
</div>
`;

exports[`AspectRatio should render with fixed aspect ratio styles 1`] = `
.circuit-1 {
  display: block;
  position: relative;
  overflow: hidden;
  height: auto;
  width: 100%;
  height: 0;
  width: 100%;
  padding-top: 62%;
}

.circuit-0 {
  display: block;
  height: auto;
  max-height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  max-height: none;
  object-fit: cover;
  z-index: 2;
}

<div
  class="circuit-1 circuit-2"
>
  <div
    class="circuit-0"
  />
</div>
`;
